# python

./: .gitignore  17n.py  2001AMC10-25.py  2010AMC10A#24.py  2017_AMC_10_B_Problem_17.py  25_100daysummerchallenge.py  50PQ#4.py  8qrecursion.py  8qrecursion_v2.py  8queens.py  BuffonNeedle.py  GCD.py  GCD_2.py  List_reverse.py  List_reverse_2.py  Mandlebrot_Times_Table_Circle.py  Primes.py  Purple_Math_2011_14.py  Purple_Math_2011_17.py  SBIMC2017_6.py  SBIMC2017_9.py  TestB7.py  WaysideSchool.py  WaysideSchool_2.py  WaysideSchool_3.py  WaysideSchool_4.py  asciitower.py  automata.py  bfs.py  buckets.py  buckets2.py  buckets3.py  contain.py  count.py  csp.py  environment.yml  factorial.py  fibb.py  fibb_2.py  fibfast.py  (+58 more)
ai/: FiveInARow.py  PolicyGradientMethods_REINFORCE_ActorCritic.ipynb  RL_gridworld4x4.py  Summary.ipynb  TicTacToeMCTS-VERSION2.ipynb  Untitled1.ipynb  snake.py  test.py
ai/AC_MountainCar-v0_Model/: actor100.pth  actor1000.pth  actor10000.pth  actor10100.pth  actor10200.pth  actor10300.pth  actor10400.pth  actor10500.pth  actor10600.pth  actor10619.pth  actor10700.pth  actor10800.pth  actor10900.pth  actor1100.pth  actor11000.pth  actor11100.pth  actor11200.pth  actor11300.pth  actor11400.pth  actor11500.pth  actor11600.pth  actor11700.pth  actor11800.pth  actor11900.pth  actor1200.pth  actor12000.pth  actor12100.pth  actor12200.pth  actor12300.pth  actor12400.pth  actor12463.pth  actor12464.pth  actor12500.pth  actor12600.pth  actor12665.pth  actor12700.pth  actor12775.pth  (+1531 more)
ai/AlphaZero/: .clang-format  CMakeLists.txt  FiveInARow.cpp  FiveInARow.py
(+5 files in other folders)
